<resources>
    <string name="app_name">AguaDeOro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_customer">Customer List</string>
    <string name="title_activity_order">Order List</string>
    <string name="title_activity_supplier_order">Supplier Order List</string>
    <string name="title_activity_inventory">Inventory List</string>
    <string name="title_activity_seller">Sellers</string>
    <string name="title_activity_customer_detail">Customer Details</string>
    <string name="title_activity_new_customer">New Customer</string>
    <string name="title_activity_new_order">New Order</string>
    <string name="title_activity_order_detail">Order Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_invt">Add Inventory</string>
    <string name="title_activity_invt_detail">Inventory Details</string>
    <string name="textview_name1">Name 1: </string>
    <string name="value_name1">Name1</string>
    <string name="textview_name2">Name 2: </string>
    <string name="value_name2">Name2</string>
    <string name="textview_address">Address: </string>
    <string name="value_address">Address</string>
    <string name="textview_email">Email: </string>
    <string name="value_email">Email</string>
    <string name="textview_tel">Telephone: </string>
    <string name="value_tel">Tel</string>
    <string name="textview_wedding">Wedding Date (civil): </string>
    <string name="textview_wedding2">Wedding Date (ceremony): </string>
    <string name="value_wedding"> DD/MM/YYYY </string>
    <string name="textview_cust_hist">Customer History</string>
    <string name="textview_date">Date</string>
    <string name="textview_payment_date">PMNT Date</string>
    <string name="textview_order_hist">Order History</string>
    <string name="textview_remark">Remark</string>
    <string name="textview_add_remark">Additional Remark</string>
    <string name="textview_orderno">Order no</string>
    <string name="textview_type">Type</string>
    <string name="textview_deadline">Deadline</string>
    <string name="textview_total">Total</string>
    <string name="textview_remain">Remain</string>
    <string name="textview_status"><u>Status</u></string>
    <string name="textview_custname">Customer name</string>
    <string name="textview_created">Date created</string>
    <string name="nocustomer">No customer!</string>
    <string name="noorder">No data!</string>
    <string name="button_custmgm">Customer Management</string>
    <string name="button_ordmgm">Order Management</string>
    <string name="button_sordmgm">Supplier Order Management</string>
    <string name="button_inventory">Inventory</string>
    <string name="button_calendar">Calendar</string>
    <string name="button_report">Journal</string>
    <string name="saving_cust">Saving customer information</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="saving_ord">Saving order</string>
    <string name="textview_orderdate">Order Date </string>
    <string name="textview_orddeadline">Order Deadline</string>
    <string name="textview_discnt">Discount </string>
    <string name="update_total">Update total</string>
    <string name="add_comp">Add component</string>
    <string name="copy_comp">Copy last component</string>
    <string name="remove_comp">Remove last component</string>
    <string name="ord_no">Order number</string>
    <string name="ord_no_short">Order</string>
    <string name="cust">Customer </string>
    <string name="ord_stat">Order Status</string>
    <string name="ord_date">Order Date </string>
    <string name="ord_type">Order type </string>
    <string name="ord_dl">Order deadline</string>
    <string name="type">Type</string>
    <string name="paid">Paid </string>
    <string name="payhist">Order History</string>
    <string name="mode">Mode</string>
    <string name="amt">Amount</string>
    <string name="amt_short">AMNT</string>
    <string name="ord_cmp">Order components</string>
    <string name="reci">Recipient</string>
    <string name="paymode">Payment mode</string>
    <string name="paymode_short">PMNT mode</string>
    <string name="artno">Article No.</string>
    <string name="arttp">Article Type</string>
    <string name="artpf">Description</string>
    <string name="inst">Instruction</string>
    <string name="step">Step</string>
    <string name="material">Material</string>
    <string name="color">Color</string>
    <string name="len">Length</string>
    <string name="ht">Height</string>
    <string name="sz">Size</string>
    <string name="surface">Surface</string>
    <string name="stone">Stone</string>
    <string name="stone_detail">Stone Detail</string>
    <string name="engrave">Engraving</string>
    <string name="engravetext">Engraving Text</string>
    <string name="engravetype">Engraving Type </string>
    <string name="engravefont"> Font </string>
    <string name="engravecost"> Engraving cost</string>
    <string name="itemprice">Item Price</string>
    <string name="print_note_en">Print Thankyou Note(en)</string>
    <string name="print_note_fr">Print Thankyou Note(fr)</string>
    <string name="editcust">Edit Customer</string>
    <string name="addRDV">Add RDV</string>
    <string name="addhist">Add History</string>
    <string name="viewaction">View actions</string>
    <string name="addord">New Order</string>
    <string name="addsaleord">New Sale</string>
    <string name="addpreord">New Preview Order</string>
    <string name="addrepord">New Repair Order</string>
    <string name="newcust">New Customer</string>
    <string name="sync">Sync settings</string>
    <string name="addpay">Add payment</string>
    <string name="updatestat">Update details</string>
    <string name="updatedeadline">Update deadline</string>
    <string name="error_retrieving_data">Error retrieving data!</string>
    <string name="edit_cust_info">Edit Customer Info</string>
    <string name="edit_hist">Edit History</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="newStt">Interessés</string>
    <string name="placed_ord_no">Placed Order number </string>
    <string name="finis_sync">Finish syncing.</string>
    <string name="add_history">Add new history entry</string>
    <string name="add_payment">Add new payment entry</string>
    <string name="update_ord_stt">Update order status</string>
    <string name="update_ord_dl">Update order deadline</string>
    <string name="update_comp_stt">Update instruction status</string>
    <string name="comp_hist">Component History</string>
    <string name="add_inst">Add Instruction</string>
    <string name="print_order">View Order Conf.</string>
    <string name="send_order_en">Send Order Conf.(EN)</string>
    <string name="send_order_fr">Send Order Conf.(FR)</string>
    <string name="print_invoice_en">Print Invoice(EN)</string>
    <string name="print_invoice_fr">Print Invoice(FR)</string>
    <string name="order_closed_en">Send order closed email(EN)</string>
    <string name="order_closed_fr">Send order closed email(FR)</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="order_no">Order Number</string>
    <string name="order_deadline">Deadline</string>
    <string name="search_deadline">Search by deadline</string>
    <string name="search_name">Search by name</string>
    <string name="search_num">Search by order number</string>
    <string name="search_email">Search by email</string>
    <string name="search_address">Search by address</string>
    <string name="search_tel">Search by phone</string>
    <string name="search_wedding">Search by wedding date</string>
    <string name="search_date">Search by date</string>
    <string name="select_photo">Select photo</string>
    <string name="stone_tittle">Stone Details</string>
    <string name="stone_dia">Diameter</string>
    <string name="stone_color">Color</string>
    <string name="stone_clarity">Clarity</string>
    <string name="stone_carat">Carat</string>
    <string name="stone_amount">Number of stones</string>
    <string name="stone_setting">Setting</string>
    <string name="stone_remark">Remark</string>
    <string name="stone_remark_hint">C/P/S</string>
    <string name="suppOrdNo">Supp Ord No</string>
    <string name="edit_inst">Edit Instruction</string>
    <string name="fingerprint">Fing. Prnt</string>
    <string name="microtext">Microtext </string>
    <string name="send">Send</string>
    <string name="order_ready_en">Send order ready notice(EN)</string>
    <string name="order_ready_fr">Send order ready notice(FR)</string>
    <string name="sorting">Sorting...</string>
    <string name="sent_thank">Thank you note sent.</string>
    <string name="sent_conf">Order confirmation email sent.</string>
    <string name="sent_ready">Order ready notice email sent.</string>
    <string name="sent_supplier">Order request sent to supplier.</string>
    <string name="invoice_printed">Invoice printed.</string>
    <string name="deleted">Deleted.</string>
    <string name="seller">Seller</string>
    <string name="price">Unit price</string>
    <string name="quantity">Quantity</string>
    <string name="choose_date">Choose Date</string>
    <string name="validate">Validate</string>
    <string name="validate_by">Validated by</string>
    <string name="validate_by_short">Val. by</string>
    <string name="cash_flow">Cash Flow</string>
    <string name="mark">Mark</string>
    <string name="category">Category</string>
    <string name="desc">Description</string>
    <string name="invt_code">Inventory Code</string>
    <string name="catalog_code">Catalog Code</string>
    <string name="supp_code">Supplier Code</string>
    <string name="width">Width</string>
    <string name="weight">Weight</string>
    <string name="cut">Cut</string>
    <string name="polish">Polish</string>
    <string name="symm">Symmetry</string>
    <string name="lab">LAB</string>
    <string name="cert">Certificate</string>
    <string name="cost">Cost</string>
    <string name="movement">Movement</string>
    <string name="int_hist">Inventory History</string>
    <string name="output">Take out</string>
    <string name="output_by">Take out by</string>
    <string name="until"> days until :</string>
    <string name="select_mul">Multiple select</string>
    <string name="reset">Reset</string>
    <string name="sold">Sold</string>
    <string name="returned">Return</string>
    <string name="payment_report">Payment report</string>
    <string name="howyoufind">How did you hear about us?</string>
    <string name="internet_google">Internet/Google</string>
    <string name="wordofmouth">Word of mouth</string>
    <string name="salon">Wedding fair</string>
    <string name="street">Saw the shop</string>
    <string name="other">Other</string>
    <string name="othertext">Flyer, magazine, etc</string>
    <string name="instruction">Instructions</string>
    <string name="price2">Price</string>
    <string name="to_invoice">To \nInvoice</string>
    <string name="select_for_invoice">Select for invoice</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="warningPrice">Warning ! for rings with twin stones, you must select the quality/color of the 2nd stone via the dropdowns. If not, the price will  not be right</string>
    <string-array name="dropdown_status">
        <item>Status 1</item>
        <item>Status 2</item>
        <item>Status 3</item>
    </string-array>
    <string-array name="dropdown_status2">
        <item>No Change</item>
        <item>Status 1</item>
        <item>Status 2</item>
        <item>Status 3</item>
    </string-array>
</resources>