<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/order_number"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/ord_no" />

    <TextView
        android:id="@+id/order_type"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/type" />

    <TextView
        android:id="@+id/date"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/textview_date" />

    <TextView
        android:id="@+id/customer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/cust" />

    <TextView
        android:id="@+id/total"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/textview_total" />

    <TextView
        android:id="@+id/remain"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/textview_remain" />

    <TextView
        android:id="@+id/status"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/textview_status" />

    <TextView
        android:id="@+id/deadline"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/textview_deadline" />

    <TextView
        android:id="@+id/seller"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/seller" />

</LinearLayout>