<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.aguadeoro.activity.OrderDetailActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="Home" />
    <item
        android:id="@+id/action_add_payment"
        android:orderInCategory="40"
        android:showAsAction="always"
        android:title="@string/addpay" />
    <item
        android:id="@+id/action_update_status"
        android:orderInCategory="51"
        android:showAsAction="always"
        android:title="@string/updatestat" />
    <item
        android:id="@+id/action_update_deadline"
        android:orderInCategory="50"
        android:showAsAction="ifRoom"
        android:title="@string/updatedeadline" />
    <!--<item-->
    <!--android:id="@+id/action_change_total"-->
    <!--android:orderInCategory="51"-->
    <!--android:showAsAction="never"-->
    <!--android:title="Ajuster Total"/>-->
    <item
        android:id="@+id/action_add_installment"
        android:orderInCategory="52"
        android:showAsAction="never"
        android:title="Add Installment" />
    <item
        android:id="@+id/action_print_customer_order"
        android:orderInCategory="80"
        android:showAsAction="always"
        android:title="@string/print_order" />
    <item
        android:id="@+id/action_add_history"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:title="@string/add_history" />
    <item
        android:id="@+id/action_send_customer_offer_en"
        android:orderInCategory="91"
        android:showAsAction="ifRoom"
        android:title="Send Offer (EN)" />
    <item
        android:id="@+id/action_send_customer_offer_fr"
        android:orderInCategory="91"
        android:showAsAction="ifRoom"
        android:title="Send Offer (FR)" />
    <item
        android:id="@+id/action_send_customer_order_en"
        android:orderInCategory="91"
        android:showAsAction="ifRoom"
        android:title="@string/send_order_en" />
    <item
        android:id="@+id/action_send_customer_order_fr"
        android:orderInCategory="91"
        android:showAsAction="ifRoom"
        android:title="@string/send_order_fr" />
    <item
        android:id="@+id/action_send_order_ready_en"
        android:orderInCategory="91"
        android:showAsAction="ifRoom"
        android:title="@string/order_ready_en" />
    <item
        android:id="@+id/action_send_order_ready_fr"
        android:orderInCategory="91"
        android:showAsAction="ifRoom"
        android:title="@string/order_ready_fr" />
    <item
        android:id="@+id/action_send_order_closed_en"
        android:orderInCategory="92"
        android:showAsAction="ifRoom"
        android:title="@string/order_closed_en" />
    <item
        android:id="@+id/action_send_order_closed_fr"
        android:orderInCategory="93"
        android:showAsAction="ifRoom"
        android:title="@string/order_closed_fr" />
    <item
        android:id="@+id/action_send_customer_repair_en"
        android:orderInCategory="91"
        android:showAsAction="ifRoom"
        android:title="Send Repair email (EN)" />
    <item
        android:id="@+id/action_send_customer_repair_fr"
        android:orderInCategory="91"
        android:showAsAction="ifRoom"
        android:title="Send Repair email (FR)" />
    <item
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/print_invoice_fr">
        <menu>
            <item
                android:id="@+id/action_print_customer_invoice_jewel_fr"
                android:title="Bijoux généraux" />
            <item
                android:id="@+id/action_print_customer_invoice_alliances_fr"
                android:title="Alliances" />
            <item
                android:id="@+id/action_print_customer_invoice_bague_fr"
                android:title="Bague de fiançailles" />
        </menu>
    </item>
    <item
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/print_invoice_en">
        <menu>
            <item
                android:id="@+id/action_print_customer_invoice_jewel_en"
                android:title="Bijoux généraux" />
            <item
                android:id="@+id/action_print_customer_invoice_alliances_en"
                android:title="Alliances" />
            <item
                android:id="@+id/action_print_customer_invoice_bague_en"
                android:title="Bague de fiançailles" />
        </menu>
    </item>
    <item
        android:id="@+id/action_send_review_en"
        android:orderInCategory="99"
        app:showAsAction="ifRoom"
        android:title="Send Review (EN)" />
    <item
        android:id="@+id/action_send_review_fr"
        android:orderInCategory="99"
        app:showAsAction="ifRoom"
        android:title="Send Review (FR)" />
    <item
        android:id="@+id/action_discount"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/textview_discnt" />

</menu>