<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/textview_date"
            android:textStyle="bold" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/suppOrdNo"
            android:textStyle="bold" />

        <TextView
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/reci"
            android:textStyle="bold" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/step"
            android:textStyle="bold" />

        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/textview_status"
            android:textStyle="bold" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/textview_deadline"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/comp_hist_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>