<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/search_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/search_name_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="searchCustomer"
            android:padding="10dp"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_email" />

        <EditText
            android:id="@+id/search_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/search_email_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="searchCustomer"
            android:padding="10dp"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_address" />

        <EditText
            android:id="@+id/search_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_address"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/search_addr_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="searchCustomer"
            android:padding="10dp"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_tel" />

        <EditText
            android:id="@+id/search_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_tel"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/search_tel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="searchCustomer"
            android:padding="10dp"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_wedding" />

        <EditText
            android:id="@+id/search_wedding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/value_wedding"
            android:inputType="date|text"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/search_wedding_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="searchCustomer"
            android:padding="10dp"
            android:text="@string/search" />
    </LinearLayout>

</LinearLayout>