<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/assign"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/seller"
        android:inputType="textCapWords"
        android:padding="5dp" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"
        android:padding="5dp"
        android:text="1" />

    <EditText
        android:id="@+id/date"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/textview_date"
        android:inputType="text|datetime"
        android:padding="5dp" />

    <EditText
        android:id="@+id/status"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/textview_status"
        android:inputType="text|datetime"
        android:padding="5dp" />

</LinearLayout>